[gd_scene load_steps=3 format=3 uid="uid://d3i64a5qg7iv"]

[ext_resource type="Script" path="res://Scenes/zude_tools_editor.gd" id="1_2osj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yafr"]

[node name="ZudeToolsEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2osj4")

[node name="ZudeToolsPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ZudeToolsMarginContainer" type="MarginContainer" parent="ZudeToolsPanelContainer"]
layout_mode = 2

[node name="ZudeToolsVBoxContainer" type="VBoxContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer"]
layout_mode = 2

[node name="ButtonsBar" type="HBoxContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NewEpisodeButton" type="Button" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ButtonsBar"]
unique_name_in_owner = true
layout_mode = 2
text = "New Episode
"

[node name="OpenProductionButtonTop" type="Button" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ButtonsBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Open Production"

[node name="ZudeToolsVSplitContainer" type="VSplitContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -500

[node name="EpisodesPanelContainer" type="PanelContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer"]
custom_minimum_size = Vector2(0, 225)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../DetailHSplitContainer/TabsPanelContainer")
focus_next = NodePath("../DetailHSplitContainer/HeroPanelContainer")
focus_previous = NodePath("../DetailHSplitContainer/TabsPanelContainer")

[node name="EpisodesMarginContainer" type="MarginContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/EpisodesPanelContainer"]
layout_mode = 2

[node name="EpisodesScrollContainer" type="ScrollContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/EpisodesPanelContainer/EpisodesMarginContainer"]
layout_mode = 2
follow_focus = true

[node name="EpisodesHFlowContainer" type="HFlowContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/EpisodesPanelContainer/EpisodesMarginContainer/EpisodesScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpenProductionButtonMid" type="Button" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/EpisodesPanelContainer/EpisodesMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Open Production"

[node name="DetailHSplitContainer" type="HSplitContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="HeroPanelContainer" type="PanelContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../EpisodesPanelContainer")
focus_neighbor_right = NodePath("../TabsPanelContainer")
focus_next = NodePath("../TabsPanelContainer")
focus_previous = NodePath("../../EpisodesPanelContainer")

[node name="HeroMarginContainer" type="MarginContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/HeroPanelContainer"]
layout_mode = 2

[node name="HeroVBoxContainer" type="VBoxContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/HeroPanelContainer/HeroMarginContainer"]
layout_mode = 2
alignment = 1

[node name="HeroVideo" type="VideoStreamPlayer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/HeroPanelContainer/HeroMarginContainer/HeroVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
expand = true

[node name="HeroPreview" type="TextureRect" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/HeroPanelContainer/HeroMarginContainer/HeroVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
expand_mode = 5
stretch_mode = 5

[node name="HeroTitle" type="Label" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/HeroPanelContainer/HeroMarginContainer/HeroVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "Select an episode..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="TabsPanelContainer" type="PanelContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../HeroPanelContainer")
focus_neighbor_top = NodePath("../../EpisodesPanelContainer")
focus_next = NodePath("../../EpisodesPanelContainer")
focus_previous = NodePath("../HeroPanelContainer")
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_0yafr")

[node name="TabsVBoxContainer" type="VBoxContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/TabsPanelContainer"]
layout_mode = 2

[node name="TabsContainer" type="TabContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/TabsPanelContainer/TabsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
drag_to_rearrange_enabled = true

[node name="SizePanelContainer" type="PanelContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/TabsPanelContainer/TabsVBoxContainer"]
layout_mode = 2

[node name="SizeMarginContainer" type="MarginContainer" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/TabsPanelContainer/TabsVBoxContainer/SizePanelContainer"]
layout_mode = 2

[node name="PreviewSizeSlider" type="HSlider" parent="ZudeToolsPanelContainer/ZudeToolsMarginContainer/ZudeToolsVBoxContainer/ZudeToolsVSplitContainer/DetailHSplitContainer/TabsPanelContainer/TabsVBoxContainer/SizePanelContainer/SizeMarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 250.0
max_value = 500.0
value = 250.0
rounded = true
scrollable = false
